client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name : client
          ports:
            - containerPort: 3000
          image: solsticetech/platform-dev:clientv5
      imagePullSecrets:
        - name: dockercredential
