server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      imagePullSecrets:
        - name: dockercredential
      containers:
        - name: server
          image: solsticetech/platform-dev:serv5
          ports:
            - containerPort: 4000
