ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    #kubernetes.io/ingress.allow-http: "false"
    #manually selecting a certificate
    solstice.us/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-2:768230297472:certificate/3458d395-718f-4481-8cd6-3de23dc7ccd3
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: platform.solstice.us
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 4000
  tls:
      - hosts:
          - platform.solstice.us
